# mcpq-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.md  Makefile  README.md  example.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  readme_link.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/classes/: block.rst.txt  entity.rst.txt  events.rst.txt  vec3.rst.txt
docs/_static/: agogo.css  basic.css  documentation_options.js
docs/classes/: block.html  entity.html  events.html  filter.html  minecraft.html  nbt.html  player.html  turtle.html  vec3.html  world.html
docsource/: conf.py  del_private_class_sig.py  index.rst  patch_inherited_bysource_order.py
docsource/classes/: block.rst  filter.rst  minecraft.rst  nbt.rst  player.rst  turtle.rst  vec3.rst  world.rst
mcpq/: __init__.py  _abc.py  _base.py  _server.py  _types.py  _util.py  colors.py  constants.py  entity.py  entitytype.py  events.py  exception.py  language.py  material.py  minecraft.py  nbt.py  player.py  text.py  vec3.py  world.py
mcpq/_proto/: __init__.py  minecraft_pb2.py  minecraft_pb2_grpc.py
mcpq/nbt/: __init__.py  _block.py  _parser.py  _parser_wrapper.py  _snbt_and_component.py  _types.py  block.py  snbt_and_component.lark
mcpq/tools/: __init__.py  chatcmd.py  imagequantizer.py  mcturtle.py
tests/: test_full_integration.py  test_module_imports.py  test_nbt.py  test_util_cache.py  test_util_rwlock.py  test_vec3.py
tests/tools/: test_mcturtle.py
